--- a/package.json
+++ b/package.json
@@ -19,11 +19,23 @@
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3"
   },
+  "devDependencies": {
+    "@types/chai": "^4.2.21",
+    "@types/chai-dom": "^0.0.10",
+    "@types/mocha": "^9.0.0",
+    "chai": "^4.3.4",
+    "chai-dom": "^1.9.0",
+    "global-jsdom": "^8.1.0",
+    "jsdom": "^16.6.0",
+    "mocha": "^9.0.3",
+    "ts-node": "^10.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "mocha --require ts-node/register --require global-jsdom/register src/**/*.test.{ts,tsx}",
+    "test:watch": "mocha --require ts-node/register --require global-jsdom/register src/**/*.test.{ts,tsx} --watch --extension ts,tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
