Globally register chai's expect
As described here: https://stackoverflow.com/a/63533201

Also put a describe in the test file, as this is more common in mocha
(it used to be a top-level "test" in Jest, but top-level "it" feels
weird, also for wording).

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
       "extension": "ts,tsx",
       "require": [
         "ts-node/register",
-        "global-jsdom/register"
+        "global-jsdom/register",
+        "chai/register-expect"
       ]
   }
 }
